force-app/main/default/objects/Product2/fields/DSALES_Aplicaparamotoexterna__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Aplicaparamotoexterna__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aplica para moto externa</label>
    <type>Checkbox</type>
</CustomField>