force-app/main/default/objects/Product2/fields/DSALES_IsClasified__c.field-meta.xml
<CustomField>
    <fullName>DSALES_IsClasified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clasificado</label>
    <type>Checkbox</type>
</CustomField>