force-app/main/default/objects/Product2/fields/DSALES_NoaplicaSeg__c.field-meta.xml
<CustomField>
    <fullName>DSALES_NoaplicaSeg__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador que muestra cuando un sku no aplica un seguro</description>
    <label>No aplica Seguro</label>
    <type>Checkbox</type>
</CustomField>