force-app/main/default/objects/Product2/fields/DSALES_NoaplicaServ__c.field-meta.xml
<CustomField>
    <fullName>DSALES_NoaplicaServ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador que muestra cuando un sku no aplica un servicio</description>
    <label>No aplica Servicio</label>
    <type>Checkbox</type>
</CustomField>