force-app/main/default/objects/Product2/fields/DSales_SKU_anterior__c.field-meta.xml
<CustomField>
    <fullName>DSales_SKU_anterior__c</fullName>
    <label>SKU anterior</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>