force-app/main/default/objects/Product2/fields/dsalesAlmacenamiento__c.field-meta.xml
<CustomField>
    <fullName>dsalesAlmacenamiento__c</fullName>
    <description>Capacidad de almacenamiento del dispositivo</description>
    <label>Almacenamiento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>