force-app/main/default/objects/Product2/fields/dsalesAnio__c.field-meta.xml
<CustomField>
    <fullName>dsalesAnio__c</fullName>
    <description>Año modelo del dispositivo</description>
    <label>Año</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>