force-app/main/default/objects/Product2/fields/dsalesAR__c.field-meta.xml
<CustomField>
    <fullName>dsalesAR__c</fullName>
    <description>Campo AR para el objeto producto.
Este campo es el tiempo que se tarda en armar el producto.</description>
    <label>AR</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>