force-app/main/default/objects/Product2/fields/dsalesColor__c.field-meta.xml
<CustomField>
    <fullName>dsalesColor__c</fullName>
    <description>color del dispositivo</description>
    <label>Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>