force-app/main/default/objects/Product2/fields/dsalesCPU__c.field-meta.xml
<CustomField>
    <fullName>dsalesCPU__c</fullName>
    <description>CPU del dispositivo</description>
    <label>CPU</label>
    <length>50</length>
    <type>Text</type>
</CustomField>