force-app/main/default/objects/Product2/fields/dsalesFormasCobro__c.field-meta.xml
<CustomField>
    <fullName>dsalesFormasCobro__c</fullName>
    <description>Se ellije la forma de cobro para el servicio. Es aplicable para servicios y seguros</description>
    <label>Forma de Cobro</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DSales_Tipo_de_Producto__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Porcentaje de Cobro</fullName>
            </value>
            <value>
                <fullName>Matriz de Precios</fullName>
            </value>
            <value>
                <fullName>Costo Fijo</fullName>
            </value>
            <value>
                <fullName>Proveedor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>