force-app/main/default/objects/Product2/fields/dsalesImei__c.field-meta.xml
<CustomField>
    <fullName>dsalesImei__c</fullName>
    <description>IMEI de dispositivo registrado</description>
    <label>IMEI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>