force-app/main/default/objects/Product2/fields/dsalesNumeroSerie__c.field-meta.xml
<CustomField>
    <fullName>dsalesNumeroSerie__c</fullName>
    <description>número de serie del dispositivo</description>
    <label>Número de serie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>