force-app/main/default/objects/Product2/fields/dsalesOpcionPago__c.field-meta.xml
<CustomField>
    <fullName>dsalesOpcionPago__c</fullName>
    <inlineHelpText>A=Anual
C=Contado
M=Mensual</inlineHelpText>
    <label>Opción de pago</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A</fullName>
                <label>Anual</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Contado</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Mensual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>