force-app/main/default/objects/Product2/fields/dsalesOperadorTelefonico__c.field-meta.xml
<CustomField>
    <fullName>dsalesOperadorTelefonico__c</fullName>
    <description>Operador telefónico del dispositivo</description>
    <label>Operador Telefónico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telcel</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Movistar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>