force-app/main/default/objects/Product2/fields/dsalesPrecioUnico__c.field-meta.xml
<CustomField>
    <fullName>dsalesPrecioUnico__c</fullName>
    <description>Campo de Precio Único para el objeto Prodcutos</description>
    <label>Precio Único</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>