force-app/main/default/objects/Product2/fields/dsalesProveedor__c.field-meta.xml
<CustomField>
    <fullName>dsalesProveedor__c</fullName>
    <label>Proveedor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>