force-app/main/default/objects/Product2/fields/dsalesRAM__c.field-meta.xml
<CustomField>
    <fullName>dsalesRAM__c</fullName>
    <description>Memoria RAM del dispositivo</description>
    <label>RAM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>