force-app/main/default/objects/Product2/fields/dsalesRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>dsalesRecordTypeName__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recordtype name</label>
    <type>Text</type>
</CustomField>