force-app/main/default/objects/Product2/fields/dsalesSubtipo__c.field-meta.xml
<CustomField>
    <fullName>dsalesSubtipo__c</fullName>
    <description>Identifica el subtipo de servicio aplicable a un SKU</description>
    <label>Subtipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garantía Extendida</fullName>
                <default>true</default>
                <label>Garantía Extendida</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>