force-app/main/default/objects/Product2/fields/dsalesTipo__c.field-meta.xml
<CustomField>
    <fullName>dsalesTipo__c</fullName>
    <description>tipo de producto</description>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Armado de Muebles</fullName>
            </value>
            <value>
                <fullName>Celulares</fullName>
            </value>
            <value>
                <fullName>Garantía Extendida</fullName>
            </value>
            <value>
                <fullName>Motocicletas</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Seguro de Celulares</fullName>
            </value>
            <value>
                <fullName>Seguro de Motos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>