force-app/main/default/objects/Product2/recordTypes/DSALES_ProdIntangible.recordType-meta.xml
<RecordType>
    <fullName>DSALES_ProdIntangible</fullName>
    <active>true</active>
    <description>Tipo de registro para los productos intangibles</description>
    <label>Producto Intangible</label>
</RecordType>