force-app/main/default/objects/Product2/recordTypes/DSALES_ProdTangible.recordType-meta.xml
<RecordType>
    <fullName>DSALES_ProdTangible</fullName>
    <active>true</active>
    <description>Tipo de registro para los productos tangibles</description>
    <label>Producto Tangible</label>
</RecordType>