force-app/main/default/objects/Product2/recordTypes/DSales_Seguro_de_Motos.recordType-meta.xml
<RecordType>
    <fullName>DSales_Seguro_de_Motos</fullName>
    <active>true</active>
    <description>Productos para Seguro de Motos</description>
    <label>Seguro de Motos</label>
</RecordType>