force-app/main/default/objects/Product2/recordTypes/dsalesArmadoMuebles.recordType-meta.xml
<RecordType>
    <fullName>dsalesArmadoMuebles</fullName>
    <active>true</active>
    <description>Tipo de registro para los servicios de armado de muebles</description>
    <label>Armado de muebles</label>
</RecordType>