force-app/main/default/objects/Product2/recordTypes/dsalesSeguroCelulares.recordType-meta.xml
<RecordType>
    <fullName>dsalesSeguroCelulares</fullName>
    <active>true</active>
    <description>tipo de registro para generación de seguros para celulares</description>
    <label>Seguro de Celulares</label>
</RecordType>