force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>DSales_Tipo_de_Producto__c</columns>
    <columns>PRODUCT2.SKU</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>DSALES_Categoria__c</columns>
    <columns>DSALES_Familia__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los productos</label>
</ListView>