force-app/main/default/objects/Product2/listViews/Nuevos.listView-meta.xml
<ListView>
    <fullName>Nuevos</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.SKU</columns>
    <columns>DSales_SKU_anterior__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Nuevos</label>
</ListView>