force-app/main/default/objects/Product2/listViews/Pruebas_Intergador.listView-meta.xml
<ListView>
    <fullName>Pruebas_Intergador</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>DSALES_Aplicaparamotoexterna__c</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>DSALES_TipoServicio__c</columns>
    <columns>DSALES_Vinculado__c</columns>
    <columns>PRODUCT2.SKU</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.DSales_Seguro_de_Motos</value>
    </filters>
    <filters>
        <field>PRODUCT2.DESCRIPTION</field>
        <operation>notEqual</operation>
    </filters>
    <label>Pruebas Intergador Intangibles</label>
</ListView>